# HalluCodeDetection

./: .gitignore  README.md  config.yaml  eval_gemma.ipynb  main.py  pyproject.toml  results.ipynb
data/results/: dataset_base.json  dataset_judge.jsonl  evaluation_results.jsonl  evaluation_results1.jsonl  pylint_results.jsonl  report.tex  trained_models.jsonl
scripts/: eval_pylint.py  plot_classification_distribution.py  plot_confusion_matrix.py  plot_shared.py  plot_training_distribution.py
src/constants/: __init__.py  dataset.py  evaluation.py  models.py  training.py  ui.py
src/core/: ui.py
src/dataset/: augmentation.py  build.py  judge_dataset.py  load.py  types.py  ui.py  utils.py  view.py  view_textual.py
src/evaluations/: __init__.py  run.py  tests.py  ui.py
src/models/: __init__.py  base.py  gemma.py  ollama_handler.py  prompts.py
src/schemas/: dataset.py  evaluation.py  judge.py  mbpp.py  training.py
src/training/: __init__.py  config.py  data.py  eval.py  gemma_example.py  helpers.py  hyperparams.py  messages.py  registry.py  runner.py  search.py  state.py  storage.py  train.py  ui.py
