[project]
name = "hallucodedetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.5",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "torch>=2.12.0",
    "transformers>=5.8.1",
    "textual>=0.80.0",
    "evaluate>=0.4.6",
    "bitsandbytes>=0.49.2",
    "trl>=1.4.0",
    "peft>=0.19.1",
    "protobuf>=7.35.0",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.12"
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
